--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+    <header class='main-header'>
+      <nav class='main-navigation'>
+        <a class='main-header-logo'>
+          <img src='img/logo.svd' width='100' height='100' alt='Логотип GllacyShop'>
+        </a>
+        <ul class='site-navigation'>
+          <li><a href='catalog.html'>Каталог</a></li>
+          <li><a href='delivery-and-payment.html'>Доставка и оплата</a></li>
+          <li><a href='about-company.html'>О Компании</a></li>
+        </ul>
+        <ul class='user-navigation'>
+            <li class='search'>Поиск</li>
+            <li class='login-link'>Вход</li>
+            <li class='basket'>Корзина</li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
