Разметка личного проекта
Исправлен формат кнопок входа/корзины/поиска. Добавлен 1 слайд мороженого, находящегося под шапкой

--- a/index.html
+++ b/index.html
@@ -8,19 +8,37 @@
     <header class='main-header'>
       <nav class='main-navigation'>
         <a class='main-header-logo'>
-          <img src='img/logo.svd' width='100' height='100' alt='Логотип GllacyShop'>
+          <img src='img/logo.svd' width='30' height='30' alt='Логотип GllacyShop'>
         </a>
         <ul class='site-navigation'>
           <li><a href='catalog.html'>Каталог</a></li>
           <li><a href='delivery-and-payment.html'>Доставка и оплата</a></li>
           <li><a href='about-company.html'>О Компании</a></li>
         </ul>
-        <ul class='user-navigation'>
-            <li class='search'>Поиск</li>
-            <li class='login-link'>Вход</li>
-            <li class='basket'>Корзина</li>
-        </ul>
+        <div class='user-navigation'>
+            <span class='search'>Поиск</span>
+            <span class='login-link'>Вход</span>
+            <span class='basket'>Корзина</span>
+        </div>
       </nav>
     </header>
+    <main class='container'>
+      <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
+      <section class='contact-information-top'>
+        <p class='working-hours'>
+          С 10 до 20, ежедневно
+        </p>
+        <p class='phone-number'>
+          8 812 450-25-25
+        </p>
+      </section>
+      <section class='slider-top'>
+        <a>
+          Крем-брюле и пломбир с малиновым джемом
+          <img src='img/crem-brulee-and-sebum-rasp'>
+          <span class='give-two'>Давайте оба!</span>
+        </a>
+      </section>
+    </main>
   </body>
 </html>
