Разметка личного проекта
Добавлены спецпредложения

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
           <span class='give-two'>Давайте оба!</span>
         </a>
       </section>
+      <h2 class='visually-hidden'>Спецпредложения</h2>
+      <section class='raspberry-offers'>
+        <h3 class='free paspberry'>Малинка даром!</h3>
+        <p>При покупке 2кг любого фруктового мороженого, добавим</p>
+        <p>в ваш заказ банку малинового варенья бесплатно.</p>
+        <span>Хочу варенье!</span>
+      </section>
+      <section class='chocolate-offers'>
+        <h3 class='free chocolate'>Шоколадки даром!</h3>
+        <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку</p>
+        <p>вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <span>Хочу шоколадки!</span>
+      </section>
     </main>
   </body>
 </html>
