--- a/index.html
+++ b/index.html
@@ -52,6 +52,35 @@
         <p>вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <span>Хочу шоколадки!</span>
       </section>
+      <h2 class='visually-hidden'>Популярные товары</h2>
+      <section class='hit-products'>
+        <ul class='product-icecream'>
+            <li>
+              <a href='#'>
+                <img src='img/creamy-orange'>
+                <h3 class='icecream'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                <img src='img/creamy-coffee'>
+                <h3 class='icecream'>Сливочно-кофейное с кусочками шоколада</h3>
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                <img src='img/creamy-strawberry'>
+                <h3 class='icecream'>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                <img src='img/creamy-brulee'>
+                <h3 class='icecream'>Сливочное крем-брюле с карамальной подливкой</h3>
+              </a>
+            </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
