Разметка личного проекта
К товарам добавлена цена

--- a/index.html
+++ b/index.html
@@ -58,24 +58,28 @@
             <li>
               <a href='#'>
                 <img src='img/creamy-orange'>
+                <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
             </li>
             <li>
               <a href='#'>
                 <img src='img/creamy-coffee'>
+                <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream'>Сливочно-кофейное с кусочками шоколада</h3>
               </a>
             </li>
             <li>
               <a href='#'>
                 <img src='img/creamy-strawberry'>
+                <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream'>Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
             </li>
             <li>
               <a href='#'>
                 <img src='img/creamy-brulee'>
+                <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream'>Сливочное крем-брюле с карамальной подливкой</h3>
               </a>
             </li>
