Разметка личного проекта
Добавлен список информации о компании

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       <h2 class='visually-hidden'>Спецпредложения</h2>
       <section class='raspberry-offers'>
         <h3 class='free paspberry'>Малинка даром!</h3>
-        <p>При покупке 2кг любого фруктового мороженого, добавим</p>
-        <p>в ваш заказ банку малинового варенья бесплатно.</p>
+        <p>При покупке 2кг любого фруктового мороженого, добавим
+           в ваш заказ банку малинового варенья бесплатно.</p>
         <span>Хочу варенье!</span>
       </section>
       <section class='chocolate-offers'>
         <h3 class='free chocolate'>Шоколадки даром!</h3>
-        <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку</p>
-        <p>вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
+            вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <span>Хочу шоколадки!</span>
       </section>
       <h2 class='visually-hidden'>Популярные товары</h2>
@@ -85,6 +85,32 @@
             </li>
         </ul>
       </section>
+      <h2 class='visually-hidden'>Приемущества компании</h2>
+      <article class='advantages'>
+        <h3>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        <ul class='advantages-list'>
+          <li class='making'>
+            <p>Все наше мороженое изготавливается на собственном
+                производстве, c использованием современного оборудования
+                и проверенных временем технологий.</p>
+          </li>
+          <li class='ecology'>
+            <p>Для изготовления мороженого используются настоящие сливки
+               и молоко высочайшего качества. Все дополнительные ингредиенты
+               и добавки произведены из натурального, экологически чистого сырья.</p>
+          </li>
+          <li class='purchase'>
+            <p>Закупка ингредиентов производится только у проверенных фермерских
+               хозяйств и компаний, с которыми нас связывает долговременное
+               сотрудничество</p>
+          </li>
+          <li class='delivery'>
+            <p>Доставка нашего мороженого до заказчиков осуществляется в
+               специальном термопаке, который не дает мороженому растаять
+               в пути и позволяет сохранить превосходный вкус.</p>
+          </li>
+        </ul>
+      </article>
     </main>
   </body>
 </html>
