Разметка личного проекта
Добавлен footer. Внесены поправки в предшествующий код (добавлены предварительные значения высоты и ширины у img, прописат атрибут alt).

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class='main-header'>
       <nav class='main-navigation'>
         <a class='main-header-logo' href='#'>
-          <img src='img/logo.svd' width='30' height='30' alt='Логотип GllacyShop'>
+          <img src='img/logo.svd' width='50' height='50' alt='Логотип GllacyShop'> <!--Ширина и высота изображений задана предварительно-->
         </a>
         <ul class='site-navigation'>
           <li><a href='catalog.html'>Каталог</a></li>
@@ -35,7 +35,7 @@
       <div class='slider-top'>
         <a href='#'>
           Крем-брюле и пломбир с малиновым джемом
-          <img src='img/crem-brulee-and-sebum-rasp'>
+          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Крем-брюле и пломбир с малиновым джемом'>
           <span class='give-two'>Давайте оба!</span>
         </a>
       </div>
@@ -56,29 +56,29 @@
       <section class='hit-products'>
         <ul class='product-icecream'>
             <li>
-              <a href='#' class='icecream'>
-                <img src='img/creamy-orange'>
+              <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
+                <img src='img/creamy-orange' width='100' height='100' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
                 <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
             </li>
             <li>
               <a href='#' class='icecream'>
-                <img src='img/creamy-coffee'>
+                <img src='img/creamy-coffee' width='100' height='100' alt='Сливочно-кофейное с кусочками шоколада'>
                 <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h3>
               </a>
             </li>
             <li>
               <a href='#' class='icecream'>
-                <img src='img/creamy-strawberry'>
+                <img src='img/creamy-strawberry' width='100' height='100' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
                 <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
             </li>
             <li>
               <a href='#' class='icecream'>
-                <img src='img/creamy-brulee'>
+                <img src='img/creamy-brulee' width='100' height='100' alt='Сливочное крем-брюле с карамальной подливкой'>
                 <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h3>
               </a>
@@ -137,6 +137,27 @@
                (c 10 до 20 ежедневно)</span></p>
         <span class='button'>Форма обратной связи</span>
       </section>
+      <footer class='main-footer'>
+        <div class='footer-social'>
+          <ul class='social-list'>
+            <li><a class='social-button twitter' href='#'>Твиттер</a></li>
+            <li><a class='social-button instagram' href='#'>Инстаграм</a></li>
+            <li><a class='social-button facebook' href='#'>Фэйсбук</a></li>
+            <li><a class='social-button vk' href='#'>Вконтаке</a></li>
+          </ul>
+        </div>
+        <div class='additional'>
+          <ul class='additional-list'>
+            <li><a class='for-providers' href='#'>Для поставщиков</a></li>
+            <li><a class='about-production' href='#'>О производсвте</a></li>
+            <li><a class='documents' href='#'>Наши документы</a></li>
+            <li><a class='standards' href='#'>Экологические стандарты</a></li>
+          </ul>
+        </div>
+        <div class='footer-copyright'>
+          <p>Сделано в <a href='#'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
+        </div>
+      </footer>
     </main>
   </body>
 </html>
