Разметка личного проекта. Каталог
Добавил будущие кнопки, пока что текстом, как требует задание.

--- a/Catalog.html
+++ b/Catalog.html
@@ -38,12 +38,18 @@
           8 812 450-25-25
         </p>
       </section>
-    </main>
-
-
-
-
-
+      <h1 class='main-caption'>Сливочное мороженое</h1>
+      <div class='options'>
+        <p>
+           Соритровка<span class='select'>по-популярности</span>
+           Цена: 100 руб. - 500 руб.<span class='range'></span>
+           Жирность:<span class='radio'></span>
+        </p>                                         <!--В задании написано пока не делать кнопки. Сделал пока что так.-->
+        <p>
+          Наполнители: <span class='checkbox'>шоколадные сахарные присыпки фрукты сиропы джемы</span>
+          <span class='button'>Применить</span>
+        </p>
+      </div>
 
     </main>
     <footer class='main-footer'>
