--- a/Catalog.html
+++ b/Catalog.html
@@ -50,7 +50,95 @@
           <span class='button'>Применить</span>
         </p>
       </div>
-
+      <section class='products'>
+        <ul class='product-icecream'>
+            <li>
+              <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
+                <img src='img/creamy-orange' width='100' height='100' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
+                <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-coffee' width='100' height='100' alt='Сливочно-кофейное с кусочками шоколада'>
+                <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-strawberry' width='100' height='100' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
+                <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-brulee' width='100' height='100' alt='Сливочное крем-брюле с карамальной подливкой'>
+                <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-lingonberry' width='100' height='100' alt='Сливочное с брусничным джемом'>
+                <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-blueberries' width='100' height='100' alt='Сливочно-черничное с цельными ягодами черники'>
+                <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-lemon' width='100' height='100' alt='Сливочно-лимонное с карамельной присыпкой'>
+                <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-chocolate' width='100' height='100' alt='Сливочное c шоколадной стружкой'>
+                <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-vanilla' width='100' height='100' alt='Сливочное-ванильное с кусочками шоколада'>
+                <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-menthol' width='100' height='100' alt='Сливочно c ментоловым сиропом'>
+                <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-black-chocolate' width='100' height='100' alt='Сливочное с кусочками черного шоколада'>
+                <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
+              </a>
+            </li>
+            <li>
+              <a href='#' class='icecream'>
+                <img src='img/creamy-mint' width='100' height='100' alt='Сливочное с мятным сиропом'>
+                <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
+                <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
+              </a>
+            </li>
+        </ul>
+      </section>
+        
     </main>
     <footer class='main-footer'>
       <div class='footer-social'>
