--- a/Catalog.html
+++ b/Catalog.html
@@ -27,7 +27,7 @@
           <a href='#'>Каталог</a> »
           <a href='catalog.html'>Сливочное</a>
         </p>
-      <nav>
+      </nav>
     </header>
     <main class='container'>
       <section class='contact-information-top'>
@@ -138,7 +138,14 @@
             </li>
         </ul>
       </section>
-        
+    <div class='slider'>
+      <a href='catalog.html'>1</a>
+      <a href='catalog2.html'>2</a>
+      <a href='catalog3.html'>3</a>
+      <a href='catalog4.html'>4</a>
+      <a href='catalog5.html'>5</a>
+      <a href='catalog2.htm' class="next">></a> <!--не совсем уверен в функционале стрелочки :)-->
+    </div>
     </main>
     <footer class='main-footer'>
       <div class='footer-social'>
