--- a/Catalog.html
+++ b/Catalog.html
@@ -7,11 +7,19 @@
   <body>
     <header class='main-header'>
       <nav class='main-navigation'>
-        <a class='main-header-logo' href='#'>
+        <a class='main-header-logo' href='index.html'>
           <img src='img/logo.svd' width='50' height='50' alt='Логотип GllacyShop'> <!--Ширина и высота изображений задана предварительно-->
         </a>
         <ul class='site-navigation'>
-          <li><a href='catalog.html'>Каталог</a></li>
+          <li><a href='catalog.html'>Каталог</a>
+            <ul class='catalog-navigation'>
+              <li><a href='#'>Новинки</a></li>
+              <li><a href='catalog.html'>Сливочное</a></li>
+              <li><a href='#'>Щербеты</a></li>
+              <li><a href='#'>Фруктовый лед</a></li>
+              <li><a href='#'>Мелорин</a></li>
+            </ul>
+          </li>
           <li><a href='delivery-and-payment.html'>Доставка и оплата</a></li>
           <li><a href='about-company.html'>О Компании</a></li>
         </ul>
