Разметка личного проекта
Добалена таблица с корзиной на странице каталога, окно авторизации, окно поиска.

--- a/Catalog.html
+++ b/Catalog.html
@@ -25,8 +25,38 @@
         </ul>
         <div class='user-navigation'>
             <span class='search'>Поиск</span>
+            <div class='search-window'>
+              <span>Что ищем?</span>
+            </div>
             <span class='login-link'>Вход</span>
+            <div class='login-window'>
+              <span class='email'>Электронная почта</span>
+              <span class='password'>Пароль</span>
+              <span class='button'>Войти</span>
+              <span class='login-problem'>Забыли пароль?</span> <!--Название login-problem не совсем подходит, но я хотел как то объединить эти кнопки, т.к у них одинаковое оформление-->
+              <span class='login-problem'>Новая регистрация</span>
+            </div>
             <span class='basket'>2 товара</span>
+              <table>
+                <tr>
+                  <td>x</td>
+                  <td><img src='icecream-orange'></td>
+                  <td>1,5 кг х <span class='backet-price'>200 руб.</span></td>
+                  <td>300 руб.</td>
+                </tr>
+                <tr>
+                  <td>x</td>
+                  <td><img src='icecream-strawberry'></td>
+                  <td>3,0 кг х <span class='backet-price'>300 руб.</span></td>
+                  <td>450 руб.</td>
+                </tr>
+                <tr>
+                  <td colspan="4">Итого 750 руб.</td>
+                </tr>
+                <tr>
+                  <td colspan="4"><span class='button'>Оформить заказ</span></td>
+                </tr>
+              </table>
         </div>
       </nav>
       <nav class='navigation-of-pages'>
