--- a/index.html
+++ b/index.html
@@ -23,10 +23,28 @@
         </ul>
         <div class='user-navigation'>
             <span class='search'>Поиск</span>
+              <div class='search-window'>
+                <span>Что ищем?</span>
+              </div>
             <span class='login-link'>Вход</span>
+              <div class='login-window'>
+                <span class='email'>Электронная почта</span>
+                <span class='password'>Пароль</span>
+                <span class='button'>Войти</span>
+                <span class='login-problem'>Забыли пароль?</span> <!--Название login-problem не совсем подходит, но я хотел как то объединить эти кнопки, т.к у них одинаковое оформление-->
+                <span class='login-problem'>Новая регистрация</span>
+              </div>
             <span class='basket'>Корзина</span>
         </div>
       </nav>
+      <section class='contact-information-top'>
+        <p class='working-hours'>
+          С 10 до 20, ежедневно
+        </p>
+        <p class='phone-number'>
+          8 812 450-25-25
+        </p>
+      </section>
     </header>
     <main class='container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1> <!--Добавил заголовки с классом "visually-hidden" для удобства разметки-->
