Разметка личного проекта
Добавлены два недостающих слайда

--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     </header>
     <main class='container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1> <!--Добавил заголовки с классом "visually-hidden" для удобства разметки-->
-      <section class='contact-information-top'>
-        <p class='working-hours'>
-          С 10 до 20, ежедневно
-        </p>
-        <p class='phone-number'>
-          8 812 450-25-25
-        </p>
-      </section>
-      <div class='slider-top'>
-        <a href='#'>
-          Крем-брюле и пломбир с малиновым джемом
+      <div class='slider-top' id='first-slide'>
+          <p>Крем-брюле и пломбир с малиновым джемом</p>
           <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Крем-брюле и пломбир с малиновым джемом'>
-          <span class='give-two'>Давайте оба!</span>
-        </a>
+          <a class='button' href='#'>Давайте оба!</a>
+      </div>
+      <div class='slider-top' id='second-slide'>
+          <p>Шоколадный пломбир и лимонный сорбет</p>
+          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Шоколадный пломбир и лимонный сорбет'>
+          <a class='button' href='#'>Давайте оба!</a>
+      </div>
+      <div class='slider-top' id='thrid-slide'>
+          <p>Пломбир с помадкой и клубничный щербет</p>
+          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Пломбир с помадкой и клубничный щербет'>
+          <a class='button' href='#'>Давайте оба!</a>
       </div>
       <h2 class='visually-hidden'>Спецпредложения</h2>
       <section class='raspberry-offers'>
