Разметка личного проекта
Заметил, что в стилгайде при наведении курсора на товар - появляется кнопка быстрого просмотра. Добавил

--- a/index.html
+++ b/index.html
@@ -50,34 +50,34 @@
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1> <!--Добавил заголовки с классом "visually-hidden" для удобства разметки-->
       <div class='slider-top' id='first-slide'>
           <p>Крем-брюле и пломбир с малиновым джемом</p>
-          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Крем-брюле и пломбир с малиновым джемом'>
+          <img src='img/cream-brulee-and-sebum-rasp' height="100" width='100' alt='Крем-брюле и пломбир с малиновым джемом'>
           <a class='button' href='#'>Давайте оба!</a>
       </div>
       <div class='slider-top' id='second-slide'>
           <p>Шоколадный пломбир и лимонный сорбет</p>
-          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Шоколадный пломбир и лимонный сорбет'>
+          <img src='img/chocolate-cream' height="100" width='100' alt='Шоколадный пломбир и лимонный сорбет'>
           <a class='button' href='#'>Давайте оба!</a>
       </div>
       <div class='slider-top' id='thrid-slide'>
           <p>Пломбир с помадкой и клубничный щербет</p>
-          <img src='img/crem-brulee-and-sebum-rasp' height="100" width='100' alt='Пломбир с помадкой и клубничный щербет'>
+          <img src='img/cream-and-strawberry' height="100" width='100' alt='Пломбир с помадкой и клубничный щербет'>
           <a class='button' href='#'>Давайте оба!</a>
       </div>
       <h2 class='visually-hidden'>Спецпредложения</h2>
-      <section class='raspberry-offers'>
-        <h3 class='free paspberry'>Малинка даром!</h3>
+      <section class='first-offers'>
+        <h3 class='offers-caption'>Малинка даром!</h3>
         <p>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
         <span class='button'>Хочу варенье!</span>    <!-- Кнопки "Хочу варенье"/"Хочу шоколадки", ведут на другую страницу или нет? -->
       </section>
-      <section class='chocolate-offers'>
-        <h3 class='free chocolate'>Шоколадки даром!</h3>
+      <section class='second-offers'>
+        <h3 class='offers-caption'>Шоколадки даром!</h3>
         <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <span class='button'>Хочу шоколадки!</span>
       </section>
       <h2 class='visually-hidden'>Популярные товары</h2>
-      <section class='hit-products'>
+
         <ul class='product-icecream'>
             <li>
               <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
@@ -85,6 +85,7 @@
                 <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -92,6 +93,7 @@
                 <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h3>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -99,6 +101,7 @@
                 <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -106,9 +109,10 @@
                 <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
                 <h3 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h3>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
         </ul>
-      </section>
+
       <h2 class='visually-hidden'>Приемущества компании</h2>
       <article class='advantages'>
         <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3> <!--Не уверен на счет того, что это все заголовок-->
