--- a/Catalog.html
+++ b/Catalog.html
@@ -96,6 +96,7 @@
                 <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -103,6 +104,7 @@
                 <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -110,6 +112,7 @@
                 <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -117,6 +120,7 @@
                 <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -124,6 +128,7 @@
                 <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -131,6 +136,7 @@
                 <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -138,6 +144,7 @@
                 <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -145,6 +152,7 @@
                 <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -152,6 +160,7 @@
                 <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -159,6 +168,7 @@
                 <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -166,6 +176,7 @@
                 <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
             <li>
               <a href='#' class='icecream'>
@@ -173,6 +184,7 @@
                 <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
                 <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
               </a>
+              <span class='button'>Быстрый просмотр</span>
             </li>
         </ul>
       </section>
@@ -182,7 +194,7 @@
       <a href='catalog3.html'>3</a>
       <a href='catalog4.html'>4</a>
       <a href='catalog5.html'>5</a>
-      <a href='catalog2.htm' class="next">></a> <!--не совсем уверен в функционале стрелочки :)-->
+      <a href='catalog2.html' class="next">></a> <!--не совсем уверен в функционале стрелочки :)-->
     </div>
     </main>
     <footer class='main-footer'>
