Разметка личного проекта
Исправил указаные недочеты на главной странице

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             <span class='basket'>Корзина</span>
         </div>
       </nav>
-      <section class='contact-information-top'>
+      <div class='contact-information-top'>
         <p class='working-hours'>
           С 10 до 20, ежедневно
         </p>
         <p class='phone-number'>
           8 812 450-25-25
         </p>
-      </section>
+      </div>
     </header>
     <main class='container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1> <!--Добавил заголовки с классом "visually-hidden" для удобства разметки-->
@@ -63,20 +63,19 @@
           <img src='img/cream-and-strawberry' height="100" width='100' alt='Пломбир с помадкой и клубничный щербет'>
           <a class='button' href='#'>Давайте оба!</a>
       </div>
-      <h2 class='visually-hidden'>Спецпредложения</h2>
+
       <section class='first-offers'>
-        <h3 class='offers-caption'>Малинка даром!</h3>
+        <h2 class='offers-caption'>Малинка даром!</h2>
         <p>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
         <span class='button'>Хочу варенье!</span>    <!-- Кнопки "Хочу варенье"/"Хочу шоколадки", ведут на другую страницу или нет? -->
       </section>
       <section class='second-offers'>
-        <h3 class='offers-caption'>Шоколадки даром!</h3>
+        <h2 class='offers-caption'>Шоколадки даром!</h2>
         <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <span class='button'>Хочу шоколадки!</span>
       </section>
-      <h2 class='visually-hidden'>Популярные товары</h2>
 
         <ul class='product-icecream'>
             <li>
@@ -113,8 +112,8 @@
             </li>
         </ul>
 
-      <h2 class='visually-hidden'>Приемущества компании</h2>
       <article class='advantages'>
+        <h2 class='visually-hidden'>Приемущества компании</h2>
         <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3> <!--Не уверен на счет того, что это все заголовок-->
         <ul class='advantages-list'>
           <li class='making'>
@@ -155,37 +154,43 @@
       <div class='map'>
           <!--Как понимаю, карту добавляем потом-->
       </div>
-      <section class='feedback-form'>
-        <p>Адрес главного офиса<br>
-           и офлайн магазина:<br>
-        <span class='adress'>ул. Большая Конюшенная<br>
-            19/8, Санкт-Петербург</span></p>
-        <p>Для заказов по телефону: <br>
-        <span class='phone-number-feedback'> 8 812 450-25-25<br>
-               (c 10 до 20 ежедневно)</span></p>
+      <div class='contact-information'>
+        <p>Адрес главного офиса
+           и офлайн магазина:</p>
+        <p class='adress'>ул. Большая Конюшенная
+            19/8, Санкт-Петербург</p>
+        <p>Для заказов по телефону:</p>
+        <p class='adress'> 8 812 450-25-25</p>
+        <p>(c 10 до 20 ежедневно)</p>
         <span class='button'>Форма обратной связи</span>
-      </section>
-      <footer class='main-footer'>
-        <div class='footer-social'>
-          <ul class='social-list'>
-            <li><a class='social-button twitter' href='#'>Твиттер</a></li>
-            <li><a class='social-button instagram' href='#'>Инстаграм</a></li>
-            <li><a class='social-button facebook' href='#'>Фэйсбук</a></li>
-            <li><a class='social-button vk' href='#'>Вконтаке</a></li>
-          </ul>
-        </div>
-        <div class='additional'>
-          <ul class='additional-list'>
-            <li><a class='for-providers' href='#'>Для поставщиков</a></li>
-            <li><a class='about-production' href='#'>О производсвте</a></li>
-            <li><a class='documents' href='#'>Наши документы</a></li>
-            <li><a class='standards' href='#'>Экологические стандарты</a></li>
-          </ul>
-        </div>
-        <div class='footer-copyright'>
-          <p>Сделано в <a href='#'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
-        </div>
-      </footer>
+      </div>
     </main>
+    <footer class='main-footer'>
+        <ul class='social-list'>
+          <li><a class='social-button twitter' href='#'>Твиттер</a></li>
+          <li><a class='social-button instagram' href='#'>Инстаграм</a></li>
+          <li><a class='social-button facebook' href='#'>Фэйсбук</a></li>
+          <li><a class='social-button vk' href='#'>Вконтаке</a></li>
+        </ul>
+        <ul class='additional-list'>
+          <li><a class='for-providers' href='#'>Для поставщиков</a></li>
+          <li><a class='about-production' href='#'>О производсвте</a></li>
+          <li><a class='documents' href='#'>Наши документы</a></li>
+          <li><a class='standards' href='#'>Экологические стандарты</a></li>
+        </ul>
+      <div class='footer-copyright'>
+        <a href='htmlacademy.ru'>
+          <img src='img/academy' width='30' height="30" alt='Логотип HTML academy'>
+        </a>
+        <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
+      </div>
+    </footer>
+    <div class='feedback-window'>
+      <b>Мы обязательно вам ответим!</b>
+      <span class='text'>Как вас зовут?</span>
+      <span class='email'>Ваша почта для ответа?</span>
+      <span class='textarea'>Напишите что-нибудь...</span>
+      <span class='button'>Отправить</span>
+    </div>
   </body>
 </html>
