Разметка личного проекта
Исправил недочеты, показанные в обзоре

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2 class='offers-caption'>Малинка даром!</h2>
         <p>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
-        <span class='button'>Хочу варенье!</span>    <!-- Кнопки "Хочу варенье"/"Хочу шоколадки", ведут на другую страницу или нет? -->
+        <span class='button'>Хочу варенье!</span>
       </section>
       <section class='second-offers'>
         <h2 class='offers-caption'>Шоколадки даром!</h2>
@@ -114,7 +114,7 @@
 
       <article class='advantages'>
         <h2 class='visually-hidden'>Приемущества компании</h2>
-        <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3> <!--Не уверен на счет того, что это все заголовок-->
+        <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
         <ul class='advantages-list'>
           <li class='making'>
             <p>Все наше мороженое изготавливается на собственном
@@ -182,7 +182,7 @@
         <a href='htmlacademy.ru'>
           <img src='img/academy' width='30' height="30" alt='Логотип HTML academy'>
         </a>
-        <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
+        <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
     <div class='feedback-window'>
