--- a/Catalog.html
+++ b/Catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class='main-header'>
       <nav class='main-navigation'>
-        <a class='main-header-logo' href='index.html'>
+        <a class='main-header-logo' href='index.html'><!--По ТЗ логотип на странице каталога - ссылка, ведущая на главную страницу.-->
           <img src='img/logo.svd' width='50' height='50' alt='Логотип GllacyShop'> <!--Ширина и высота изображений задана предварительно-->
         </a>
         <ul class='site-navigation'>
@@ -40,42 +40,42 @@
               <table>
                 <tr>
                   <td>x</td>
-                  <td><img src='icecream-orange'></td>
+                  <td><img src='icecream-orange' alt='Пломбир с апельсиновым джемом'></td>
+                  <td>Пломбир с апельсиновым джемом</td>
                   <td>1,5 кг х <span class='backet-price'>200 руб.</span></td>
                   <td>300 руб.</td>
                 </tr>
                 <tr>
                   <td>x</td>
-                  <td><img src='icecream-strawberry'></td>
+                  <td><img src='icecream-strawberry' alt='Клубничный пломбир с присыпкой из белого шоколада'></td>
+                  <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                   <td>3,0 кг х <span class='backet-price'>300 руб.</span></td>
                   <td>450 руб.</td>
                 </tr>
                 <tr>
-                  <td colspan="4">Итого 750 руб.</td>
+                  <td colspan="5">Итого 750 руб.</td>
                 </tr>
                 <tr>
-                  <td colspan="4"><span class='button'>Оформить заказ</span></td>
+                  <td colspan="5"><span class='button'>Оформить заказ</span></td>
                 </tr>
               </table>
         </div>
       </nav>
-      <nav class='navigation-of-pages'>
-        <p>
-          <a href='index.html'>Главная</a> »
-          <a href='#'>Каталог</a> »
-          <a href='catalog.html'>Сливочное</a>
-        </p>
-      </nav>
-      <section class='contact-information-top'>
+      <div class='contact-information-top'>
         <p class='working-hours'>
           С 10 до 20, ежедневно
         </p>
         <p class='phone-number'>
           8 812 450-25-25
         </p>
-      </section>
+      </div>
     </header>
     <main class='container'>
+      <ul class='breadcrumbs'>
+          <li><a href='index.html'>Главная</a> » </li>
+          <li><a href='#'>Каталог</a> » </li>
+          <li><a href='catalog.html'>Сливочное</a></li>
+      </ul>
       <h1 class='main-caption'>Сливочное мороженое</h1>
       <div class='options'>
         <p>
@@ -88,7 +88,6 @@
           <span class='button'>Применить</span>
         </p>
       </div>
-      <section class='products'>
         <ul class='product-icecream'>
             <li>
               <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
@@ -187,36 +186,39 @@
               <span class='button'>Быстрый просмотр</span>
             </li>
         </ul>
-      </section>
-    <div class='slider'>
-      <a href='catalog.html'>1</a>
-      <a href='catalog2.html'>2</a>
-      <a href='catalog3.html'>3</a>
-      <a href='catalog4.html'>4</a>
-      <a href='catalog5.html'>5</a>
-      <a href='catalog2.html' class="next">></a> <!--не совсем уверен в функционале стрелочки :)-->
-    </div>
+    <ul class='pagination'>
+      <li>
+        <a href='' class="next"><span aria-hidden='true'>&laquo;</span></a>
+      </li>
+      <li><a href='catalog.html'>1</a></li>
+      <li><a href='catalog2.html'>2</a></li>
+      <li><a href='catalog3.html'>3</a></li>
+      <li><a href='catalog4.html'>4</a></li>
+      <li><a href='catalog5.html'>5</a></li>
+      <li>
+        <a href='' class="next"><span aria-hidden='true'>&raquo;</span></a>
+      </li>
+    </ul>
     </main>
     <footer class='main-footer'>
-      <div class='footer-social'>
         <ul class='social-list'>
           <li><a class='social-button twitter' href='#'>Твиттер</a></li>
           <li><a class='social-button instagram' href='#'>Инстаграм</a></li>
           <li><a class='social-button facebook' href='#'>Фэйсбук</a></li>
           <li><a class='social-button vk' href='#'>Вконтаке</a></li>
         </ul>
-      </div>
-      <div class='additional'>
         <ul class='additional-list'>
           <li><a class='for-providers' href='#'>Для поставщиков</a></li>
           <li><a class='about-production' href='#'>О производсвте</a></li>
           <li><a class='documents' href='#'>Наши документы</a></li>
           <li><a class='standards' href='#'>Экологические стандарты</a></li>
         </ul>
-      </div>
-      <div class='footer-copyright'>
-        <p>Сделано в <a href='#'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
-      </div>
+        <div class='footer-copyright'>
+          <a href='htmlacademy.ru'>
+            <img src='img/academy' width='30' height="30" alt='Логотип HTML academy'>
+          </a>
+          <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
+        </div>
     </footer>
   </body>
 </html>
